# parse-kata

./: .gitignore  README.md  benchmark.sh  benchmarks.md  build.sh  performance_notes.md  results.md  validate.sh
docs/: go.md
samples/: 10mb-output.txt  1mb-input.txt  1mb-output.txt
solutions/Julia-single-lines-json/: README.md  parse-kata.jl  run-julia-full.cmd  run-julia-sample.cmd
solutions/Ruby-single-lines-json/: README.md  parse-kata.rb  run-ruby-full.cmd  run-ruby-sample.cmd
solutions/Scala-single-line-json/: ParseKata.scala  ParseKata.tasty  README.md  build.sbt  compile-scala.cmd  run-scala-full.cmd  run-scala-sample.cmd
solutions/bash/: run.sh
solutions/bash-jq/: run.sh
solutions/bash-lines-json/: run.sh
solutions/bash-sed/: run.sh
solutions/bash-sed-split/: run.sh
solutions/dotnet/: .gitignore  Program.cs  README.md  dotnet.sln
solutions/dotnet-lines-json/: dotnet.sln
solutions/dotnet-multi-chunks-custom/: README.md
solutions/go-attempt1/: go.mod  main.go  parse.go  parse_test.go
solutions/go-chunks-single-thread/: go.mod  go.sum  main.go  parse.go  parse_test.go
solutions/go-lines-json/: main.go  parse.go
solutions/rust/: Cargo.toml  README.md
solutions/rust-lines-json/: .gitignore  Cargo.toml  README.md
solutions/rust-lines-json/src/: lib.rs  main.rs
solutions/rust-single-lines-json/: .gitignore  Cargo.toml  README.md
solutions/rust-single-lines-json/benches/: my_benchmark.rs
solutions/rust-single-lines-json/src/: lib.rs  main.rs
solutions/rust/benches/: my_benchmark.rs
solutions/rust/src/: lib.rs  main.rs
(+48 files in other folders)
