[package]
name = "parse-kata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes"]}
serde_json = "1.0.74"
rayon = "1.5.1"
futures = "0.3.17"
boyer-moore-magiclen = "0.2.16"
structopt = "0.3.26"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
